# quant-systems-lab

./: .clang-format  .clang-tidy  .coderabbit.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HANDOFF.md  LICENSE  MILESTONES.md  Makefile  PERFORMANCE.md  PROGRESS.md  README.md  SECURITY.md
.claude/: settings.json
.claude/commands/: finish-milestone.md  resume.md  review.md  start-milestone.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: review_request.md
.github/workflows/: ci.yml
apps/qsl-bench/: main.cpp
apps/qsl-client/: main.cpp
apps/qsl-export-fixture/: main.cpp
apps/qsl-export-stream/: main.cpp
apps/qsl-gateway/: main.cpp
apps/qsl-loginspect/: main.cpp
apps/qsl-mdfeed/: main.cpp
apps/qsl-perfeval/: main.cpp
apps/qsl-replay/: main.cpp
benchmarks/: bench_false_sharing.cpp  bench_order_pool.cpp  bench_recovery.cpp  bench_storage.cpp
cmake/: CompilerWarnings.cmake  ProjectOptions.cmake  Sanitizers.cmake
data/: README.md
data/synthetic/: README.md
docs/: allocator_experiment.md  architecture.md  benchmarking.md  binary_protocol.md  concurrency_model.md  differential_testing.md  dpdk_research.md  fix_protocol.md  invariants.md  linux_performance.md  matching_rules.md  memory_ordering.md  nic_offload_study.md  ocaml_verifier.md  perf_analysis.md  persistence.md  pool_backed_storage.md  property_testing.md  recruiting_notes.md  release_readiness.md  replay_and_recovery.md  review_feedback.md  review_request.md  socket_gateway.md  socket_hardening.md  socket_profiling.md
docs/adr/: 0001-record-architecture-decisions.md  0002-independent-ocaml-oracle.md  0003-golden-fixture-regeneration.md  0004-deterministic-shrinker.md  0005-dynamic-concurrency-validation-is-evidence.md  0006-allocator-experiment-vs-engine-storage.md  0007-constrained-perf-artifacts-are-partial-evidence.md  0008-socket-evidence-loopback-constrained-epoll-deferred.md  0009-pmr-node-allocation-for-m32.md  0010-linux-epoll-gateway-prototype.md  0011-event-log-durability-modes-and-tail-repair.md
docs/performance/: perf-stat.txt
include/qsl/concurrency/: pipeline.hpp  spsc_ring.hpp
include/qsl/core/: clock.hpp  invariants.hpp  result.hpp  types.hpp
include/qsl/engine/: events.hpp  matching_engine.hpp  order.hpp  order_book.hpp  risk.hpp
include/qsl/feed/: market_data.hpp  publisher.hpp  sequence_tracker.hpp  udp_feed.hpp
include/qsl/gateway/: epoll_server.hpp  order_gateway.hpp  session.hpp  tcp_server.hpp
include/qsl/memory/: order_pool.hpp
include/qsl/protocol/: codec.hpp  endian.hpp  fix.hpp  messages.hpp
include/qsl/replay/: command.hpp  dispatch.hpp  event_log.hpp  fixture.hpp  recovery.hpp  shrink.hpp
ocaml/lib/: diff_report.ml  dune  event.ml  invariant.ml  parser.ml  replay_engine.ml  stream_parser.ml
ocaml/test/: dune  test_diff_report.ml  test_differential.ml  test_mutation.ml  test_replay.ml  test_replay_engine.ml
ocaml/test/fixtures/: MANIFEST.txt  bad_canceled_trade.txt  bad_rejected_rest.txt  bad_snapshot_level_symbol.txt  prop_seed1.txt  prop_seed10.txt  prop_seed11.txt  prop_seed12.txt  prop_seed13.txt  prop_seed14.txt  prop_seed15.txt  prop_seed16.txt  prop_seed17.txt  prop_seed18.txt  prop_seed19.txt  prop_seed2.txt  prop_seed20.txt  prop_seed21.txt  prop_seed22.txt  prop_seed23.txt  prop_seed24.txt  prop_seed25.txt  prop_seed26.txt  prop_seed27.txt  prop_seed28.txt  prop_seed29.txt  prop_seed3.txt  prop_seed30.txt  prop_seed31.txt  prop_seed32.txt  prop_seed33.txt  prop_seed34.txt  prop_seed35.txt  prop_seed36.txt  prop_seed37.txt  prop_seed38.txt  prop_seed39.txt  prop_seed4.txt  prop_seed40.txt  prop_seed41.txt  (+27 more)
regressions/: 0001-synthetic-cancel-dropping-divergence.txt  README.md
results/: README.md  allocator_experiment.txt  crash_recovery_validation.txt  differential.txt  dpdk_environment.txt  false_sharing_study.txt  flamegraph.txt  latest.txt  nic_offload_environment.txt  numa_affinity_study.txt  perf_report_linux.txt  perf_stat_linux.txt  pool_backed_storage.txt  recovery_benchmarks.txt  socket_load_summary.txt  socket_profile_loopback.txt  socket_stress_summary.txt
scripts/: check_fixtures.sh  concurrency_stress.sh  crash_recovery_validation.sh  demo.sh  determinism_check.sh  divergence_demo.sh  dpdk_environment_check.sh  fixture_manifest.sh  flamegraph.py  flamegraph.sh  nic_offload_check.sh  numa_affinity_study.sh  perf_record.sh  perf_stat.sh  profile_gateway_io.sh  qsl_common.sh  run_allocator_experiment.sh  run_benchmarks.sh  run_diff_benchmarks.sh  run_false_sharing_study.sh  run_recovery_benchmarks.sh  run_storage_benchmarks.sh  seed_sweep.sh  socket_load.sh  socket_stress.sh
src/core/: types.cpp
src/engine/: contiguous_store.hpp  matching_engine.cpp  order_book.cpp  risk.cpp
src/feed/: market_data.cpp  publisher.cpp  udp_feed.cpp
src/gateway/: epoll_server.cpp  order_gateway.cpp  session.cpp  tcp_server.cpp
src/protocol/: codec.cpp  fix.cpp
src/replay/: command.cpp  event_log.cpp  fixture.cpp  recovery.cpp  shrink.cpp
tests/: CMakeLists.txt
tests/cmake/: expect_command_failure.cmake
tests/concurrency/: test_backpressure.cpp  test_pipeline.cpp  test_spsc_stress.cpp
tests/shell/: test_flamegraph.sh  test_qsl_common.sh
tests/unit/: test_clock.cpp  test_epoll_gateway.cpp  test_event_log.cpp  test_fix_protocol.cpp  test_fixture_export.cpp  test_fuzz_protocol.cpp  test_invariants.cpp  test_market_data.cpp  test_matching_engine.cpp  test_md_feed.cpp  test_oracle_selftest.cpp  test_order_book.cpp  test_order_pool.cpp  test_protocol.cpp  test_reject_coverage.cpp  test_replay.cpp  test_risk_gateway.cpp  test_session.cpp  test_shrink.cpp  test_smoke.cpp  test_spsc_ring.cpp  test_tcp_gateway.cpp  test_types.cpp
